@@ -332,6 +332,9 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       start binaries like paplay.
     - src/pulsemanager.cpp: don't remove PA config and log file in
       ~/.x2go/pulse on PA shutdown if debugging has been requested.
+    - src/x2goutils.{cpp,h}: add new function find_binary (). Searches for a
+      specific binary in a colon-separated list of paths. Really just a compat
+      function, as Qt 5 includes QStandardPaths::findExecutable ().
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
